feat: Initialize Storybook configuration with Next.js and Vite support
- Added main configuration file for Storybook with experimental Next.js Vite framework.
- Created preview configuration for Storybook with control parameters.
- Set up Vitest for testing Storybook stories with project annotations.
- Implemented a new development page for button components with variant and style selection.
- Created a layout component for the development section with navigation links.
- Added a basic development page for testing purposes.
- Developed stories for Button and ButtonLink components with various configurations and states.
- Implemented ButtonLink component to integrate with Next.js links and button styles.
- Configured Vitest to run tests for Storybook stories using Playwright.

--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -1,22 +1,48 @@
 @import "tailwindcss";
 
 @theme {
-	--color-primary: #4a90e2;
+	/* Color */
+	--color-primary: var(--color-blue-600);
+	--color-primary-hover: var(--color-blue-700);
+	--color-primary-disabled: var(--color-blue-200);
+	--color-primary-shadow: var(--color-blue-100);
 	--color-primary-foreground: #ffffff;
-	--color-secondary: #fafafa;
-	--color-secondary-foreground: #414651;
+
+	--color-secondary: #ffffff;
+	--color-secondary-hover: var(--color-gray-50);
+	--color-secondary-shadow: var(--color-gray-100);
+	--color-secondary-disabled: var(--color-gray-200);
+	--color-secondary-foreground: var(--color-gray-700);
+
 	--color-accent: #f5a623;
 	--color-accent-foreground: #ffffff;
-	--color-background: #f5f7fa;
-	--color-foreground: #414651;
+
+	--color-background: #E9EAEB;
+	--color-foreground: var(--color-gray-700);
 	--color-success: #12b76a;
 	--color-success-foreground: #ffffff;
 	--color-warning: #f79009;
 	--color-warning-foreground: #ffffff;
-	--color-destructive: #f04438;
+
+	--color-destructive: var(--color-red-600);
 	--color-destructive-foreground: #ffffff;
-	--color-border: #d5d7da;
+
+	--color-card: #ffffff;
+	--color-card-foreground: var(--color-gray-700);
+	--color-border: var(--color-gray-300);
 	--color-divider: #e9eaeb;
+
+	/* Box shadow */
+	--shadow-xs: 0 1px 2px hsl(218deg 29% 5% / 5%);
+	--shadow-xs-focused-primary: 0 1px 2px hsl(218deg 29% 5% / 5%), 0 0 0 4px var(--color-primary-shadow);
+	--shadow-xs-focused-secondary: 0 1px 2px hsl(218deg 29% 5% / 5%), 0 0 0 4px var(--color-secondary-shadow);
+	--shadow-xs-focused-error: 0 1px 2px hsl(218deg 29% 5% / 5%), 0 0 0 4px var(--color-red-100);
+}
+
+@layer base {
+	* {
+		@apply border-divider;
+	}
 }
 
 @layer components {
