--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -17,7 +17,7 @@
 	--color-accent: #f5a623;
 	--color-accent-foreground: #ffffff;
 
-	--color-background: #E9EAEB;
+	--color-background: #FFFFFF;
 	--color-foreground: var(--color-gray-700);
 	--color-success: #12b76a;
 	--color-success-foreground: #ffffff;
@@ -37,6 +37,7 @@
 	--shadow-xs-focused-primary: 0 1px 2px hsl(218deg 29% 5% / 5%), 0 0 0 4px var(--color-primary-shadow);
 	--shadow-xs-focused-secondary: 0 1px 2px hsl(218deg 29% 5% / 5%), 0 0 0 4px var(--color-secondary-shadow);
 	--shadow-xs-focused-error: 0 1px 2px hsl(218deg 29% 5% / 5%), 0 0 0 4px var(--color-red-100);
+	--shadow-xs-inset: inset 0 0 0 1px hsl(0deg 0% 100% / 15%), 0 1px 2px hsl(218deg 29% 5% / 5%);
 }
 
 @layer base {
